--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="chase.html">Chase.com</a>
             <a href="ahmed.html">Ahmed.com</a>
-            <a href="nick.html">Jacob.com</a>
+            <a href="jacob.html">Jacob.com</a>
         </nav>
     </main>
     <footer>
