--- a/ahmed.html
+++ b/ahmed.html
@@ -9,7 +9,7 @@
 <body id="top">
     <div class="title">Nissan Skyline GTR</div>
     <button class="back" onclick="location.href='index.html'">Main Page</button>
-    <button class="button2" onclick="location.href='page3.html'">Chase</button>
+    <button class="button2" onclick="location.href='chase.html'">Chase</button>
     <button class="button3" onclick="location.href='page3.html'">Nick</button>
     
     <video class="fullscreen-video" autoplay muted loop>
