--- a/ahmed.html
+++ b/ahmed.html
@@ -10,7 +10,7 @@
     <div class="title">Nissan Skyline GTR</div>
     <button class="back" onclick="location.href='index.html'">Main Page</button>
     <button class="button2" onclick="location.href='chase.html'">Chase</button>
-    <button class="button3" onclick="location.href='page3.html'">Nick</button>
+    <button class="button3" onclick="location.href='page3.html'">Jacob</button>
     
     <video class="fullscreen-video" autoplay muted loop>
         <source src="https://www.dropbox.com/scl/fi/0sequgkj7440a421qf3pc/gtr.mp4?rlkey=481xyjc5l0ea4huvp9vc3z1gc&raw=1" type="video/mp4">
