--- a/ahmed.html
+++ b/ahmed.html
@@ -13,7 +13,7 @@
     <div class="subheader1">
     <!-- main buttons -->
         <button class="back" onclick="location.href='index.html'">Main Page</button>
-        <button class="chasebutton" onclick="location.href='Chase.html'">Chase</button>
+        <button class="chasebutton" onclick="location.href='chase.html'">Chase</button>
         <button class="jacobbutton" onclick="location.href='page3.html'">Jacob</button>
     </div>
 
