--- a/chase.html
+++ b/chase.html
@@ -13,7 +13,7 @@
         <!-- main buttons -->
         <button class="back" onclick="location.href='index.html'">Main Page</button>
         <button class="ahmedbutton" onclick="location.href='ahmed.html'">Ahmed</button>
-        <button class="jacobbutton" onclick="location.href='page3.html'">Jacob</button>
+        <button class="jacobbutton" onclick="location.href='jacob.html'">Jacob</button>
     </div>
     <!-- subheader2 links -->
     <div class="subheader">
