--- a/ahmed.html
+++ b/ahmed.html
@@ -14,7 +14,7 @@
     <!-- main buttons -->
         <button class="back" onclick="location.href='index.html'">Main Page</button>
         <button class="chasebutton" onclick="location.href='chase.html'">Chase</button>
-        <button class="jacobbutton" onclick="location.href='page3.html'">Jacob</button>
+        <button class="jacobbutton" onclick="location.href='jacob.html'">Jacob</button>
     </div>
 
     <video class="fullscreen-video" autoplay muted loop>
