--- a/ahmed.html
+++ b/ahmed.html
@@ -26,7 +26,7 @@
     <div class="engineinfo" id="Engine">
         <h1>Engine</h1>
         <p>The R34 Skyline boasts an amazing RB26DETT, creating a whopping 493hp and 400lb of torque. The cast iron block gave the RB engine the ability to handle anything thrown at it.</p>
-        <img src="https://www.dropbox.com/scl/fi/mtv9rkzl3fg0udzis395q/engine2.png?rlkey=r1xv1qvwejxioyuzxwvae9tln&st=meiefxvm&raw=1" alt="RB26DETT Engine">
+        <img src="https://github.com/Ahmedd7777/Wiki-Assignment/blob/main/images/engine.png" alt="RB26DETT Engine">
         <p>This very engine was first seen by the public in about 1989 in the Skyline pictured above. The Skyline dominated the racing world and grew to the likings of car enthuasists. A big difference between the RB26 and its predecessor, the RB25, is that this one uses a cylinder block without an oil port. It also includes six individual throttle bodies and two Garrett twin-turbos. Which is the reason why it sounds so majestic. Inline-six engines are the best when it comes to car-enthuasists due to its rich tone that grows stronger as the gas pedal is pushed. This engine is widely known for its lack of reliability. However, that's only due to improper tuning and over-boosting.</p>
     </div>
 
