--- a/ahmed.html
+++ b/ahmed.html
@@ -20,7 +20,7 @@
 
     <main>
         <video class="fullscreen-video" autoplay muted loop>
-            <source src="https://raw.githubusercontent.com/Ahmedd7777/Wiki-Assignment/main/images/gtr.mp4" type="video/mp4">
+            <source src="https://github.com/Ahmedd7777/Wiki-Assignment/blob/main/images/gtr.mp4" type="video/mp4">
             Your browser does not support the video tag. 
         </video>    
 
