--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
     <header>
         <h1>Welcome to the Website4Sale Wiki</h1>
-        <img src="images/online_sale.png" alt="For sale sign">
+        <img src="images/onlinesale.png" alt="For sale sign">
     </header>
     <aside>
         <p>Current websites for sale are listed below, click any of the directories to preview.</p>
