--- a/mona.html
+++ b/mona.html
@@ -74,7 +74,7 @@
     </div>
 
     <footer>
-        <p>medo did it.</p>
+        <p>Page made by Ahned. Images supplied by Travis Cattington..</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
