--- a/mona.html
+++ b/mona.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mona The Cat</title>
-    <link rel="stylesheet" href="mona.css">
+    <link rel="stylesheet" href="styles/mona.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -23,19 +23,19 @@
         <aside class="sidebar">
             <h2>Mona's personality</h2>
             <div class="card">
-                <img src="images/mona3.jpg" class="card-img-top" alt="Mona being sassy">
+                <img src="images/Mona/mona3.jpg" class="card-img-top" alt="Mona being sassy">
                 <div class="card-body">
                     <p>Sassy Mona</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/mona1.jpg" class="card-img-top" alt="Mona about to attack">
+                <img src="images/Mona/mona1.jpg" class="card-img-top" alt="Mona about to attack">
                 <div class="card-body">
                     <p>Mona in attack mode</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/mona2.jpg" class="card-img-top" alt="Mona with her zoomies">
+                <img src="images/Mona/mona2.jpg" class="card-img-top" alt="Mona with her zoomies">
                 <div class="card-body">
                     <p>Mona after her zoomies</p>
                 </div>
@@ -52,13 +52,13 @@
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/mona4.jpg" class="d-block w-100" alt="Mona">
+                        <img src="images/Mona/mona4.jpg" class="d-block w-100" alt="Mona">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/mona5.jpg" class="d-block w-100" alt="Mona">
+                        <img src="images/Mona/mona5.jpg" class="d-block w-100" alt="Mona">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/mona6.jpg" class="d-block w-100" alt="Mona">
+                        <img src="images/Mona/mona6.jpg" class="d-block w-100" alt="Mona">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
