--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travis' Cat Family</title>
-    <link rel="stylesheet" href="/Wiki-Assignment/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -123,7 +123,7 @@
         <p>Page made by Ahmed & Chase. Images supplied by Travis Cattington.</p>
     </footer>
 
-    <script src="/scripts/index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
