--- a/mona.html
+++ b/mona.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mona The Cat</title>
-    <link rel="stylesheet" href="./styles/mona.css">
+    <link rel="stylesheet" href="styles/mona.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
