--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mb-3">
                 <label for="favoriteCat" class="form-label">Favorite Cat</label>
                 <select id="favoriteCat" class="form-select" required>
-                    <option value=""></option>
+                    <option value="" disabled selected>Please select a cat</option>
                     <option value="Maxwell">Maxwell</option>
                     <option value="Tenley">Tenley</option>
                     <option value="Mona">Mona</option>
